package fr.ensicaen.ensibrary.libraryapi.model;

public enum State {
    AVAILABLE,
    BORROWED,
    UNAVAILABLE
}
